// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-button Should render a button, case controls 1`] = `
<mg-button>
  <!---->
  <button aria-controls="element-controlled" aria-disabled="false" aria-label="label" class="mg-button mg-button--primary" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button Should render a button, case expanded false 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" aria-label="label" class="mg-button mg-button--primary" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button Should render a button, case expanded true 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" aria-expanded="" aria-label="label" class="mg-button mg-button--primary" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button Should render an danger button isIcon false 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" aria-label="label" class="mg-button mg-button--danger" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button Should render an danger button isIcon true 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" aria-label="label" class="mg-button mg-button--danger mg-button--icon" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button Should render an danger-alt button isIcon false 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" aria-label="label" class="mg-button mg-button--danger-alt" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button Should render an danger-alt button isIcon true 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" aria-label="label" class="mg-button mg-button--danger-alt mg-button--icon" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button Should render an flat button isIcon false 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" aria-label="label" class="mg-button mg-button--flat" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button Should render an flat button isIcon true 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" aria-label="label" class="mg-button mg-button--flat mg-button--icon" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button Should render an info button isIcon false 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" aria-label="label" class="mg-button mg-button--info" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button Should render an info button isIcon true 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" aria-label="label" class="mg-button mg-button--icon mg-button--info" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button Should render an primary button isIcon false 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" aria-label="label" class="mg-button mg-button--primary" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button Should render an primary button isIcon true 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" aria-label="label" class="mg-button mg-button--icon mg-button--primary" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button Should render an secondary button isIcon false 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" aria-label="label" class="mg-button mg-button--secondary" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button Should render an secondary button isIcon true 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" aria-label="label" class="mg-button mg-button--icon mg-button--secondary" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button prevent double click should NOT disable button after click 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" class="mg-button mg-button--primary" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button prevent double click should NOT disable button after click 2`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" class="mg-button mg-button--primary" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button prevent double click should NOT disable button after click 3`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" class="mg-button mg-button--primary" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button prevent double click should disable button after click 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" class="mg-button mg-button--primary" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button prevent double click should disable button after click 2`] = `
<mg-button>
  <!---->
  <button aria-disabled="true" class="mg-button mg-button--loading mg-button--primary" id="identifier">
    <mg-icon icon="loader" spin=""></mg-icon>
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button prevent double click should disable button after click 3`] = `
<mg-button>
  <!---->
  <button aria-disabled="false" class="mg-button mg-button--primary" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;

exports[`mg-button prevent double click should not have fn when disabled 1`] = `
<mg-button>
  <!---->
  <button aria-disabled="true" class="mg-button mg-button--primary" id="identifier">
    <div class="mg-button__content">
      Text button
    </div>
  </button>
</mg-button>
`;
